fixed jumping in footer

--- a/src/sass/mob/_footer.scss
+++ b/src/sass/mob/_footer.scss
@@ -32,7 +32,7 @@
       text-shadow: 0 0 3px #d4144300, 0px 0px 3px #fff, 0px 0px 5px #fff,
         0px 0px 7px #fff, 0 0 1px var(--font-color-three);
       transform: scale(1.05);
-      margin-left: 5px;
+      // margin-left: 5px;
       color: var(--font-color-five);
     }
   }
